[package]
name = "s3-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.71"
dotenv = "0.15.0"
aws-sdk-cloudfront = "0.28.0"
chrono = "0.4.26"
base64 = "0.21.0"
hmac = "0.12.1"
sha1 = "0.10.5"
sha2 = "0.10.6"
url = "2.3.1"
rsa = { version = "0.9.2", features = ["pem", "sha2"] }
aws-sigv4 = "1.2.9"
cloudfront_sign = "0.1.0"
reqwest = "0.12.12"
serde = { version = "1.0.219", features = ["derive"] }
envy = "0.4.2"
