[package]
name = "s3-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.71"
dotenv = "0.15.0"
chrono = "0.4.26"
cloudfront_sign = "0.1.0"
reqwest = "0.12.12"
serde = { version = "1.0.219", features = ["derive"] }
envy = "0.4.2"
uuid = { version = "1.15.1", features = ["v4"] }
thiserror = "2.0.12"
